2008-06-18  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (fill_time_settings_window): also select the current day on
	the calendar so that if you open the "set time" dialog on two
	different days, the calendar is always on the current day (and you
	don't accidentaly set time in past)
	Patch by Michael Meeks <michael.meeks@novell.com>.
	https://bugzilla.novell.com/show_bug.cgi?id=395146

==================== 2.22.2 ====================

2008-05-26  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* gnome-clock-applet-mechanism.policy.in: rename to...
	* org.gnome.clockapplet.mechanism.policy.in: this, and add <vendor>,
	<vendor_url>, <icon>

2008-05-13  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (run_prefs_locations_add), (edit_tree_row): put the focus in
	the name entry

2008-05-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (is_appointment): accept google uri too, for
	google calendars and use g_ascii_strcasecmp(). Should help with bug
	#525691
	(is_birthday), (is_weather): use g_ascii_strcasecmp()

2008-04-23  Matthias Clasen  <mclasen@redhat.com>

        * system-timezone.c (system_timezone_is_zone_file_valid): Don't 
	assume that g_io_channel_read_chars returns a NUL-terminated 
	string - it doesn't.

2008-04-17  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: revert last commit on this branch, since we're string
	frozen.

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Change the mnemonics for the clock format radios
	to avoid a conflict with the help button. 

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	* clock.c: Make the help button on the preference dialog work.

==================== 2.22.1.3 ====================

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* system-timezone.c: (system_timezone_write_key_file),
	(recursive_compare), (files_are_identical_inode),
	(files_are_identical_content),
	(system_timezone_read_etc_localtime_content),
	(system_timezone_is_zone_file_valid),