@@ -1,3 +1,8 @@
+2008-06-19  Vincent Untz  <vuntz@gnome.org>
+
+	* clock.c: (fill_time_settings_window): fix previous commit. Thanks to
+	Chenthill Palanisamy <pchenthill@novell.com> for noticing the breakage.
+
 2008-06-18  Vincent Untz  <vuntz@gnome.org>
 
 	* clock.c: (fill_time_settings_window): also select the current day on
